# digital-employee-website

./: .gitignore  README.md  alembic.ini  docker.sh  fix_zsh.sh  install_deps.sh  main.py  pyproject.toml  requirements.txt
app/: Dockerfile  README.md  __init__.py  alembic.ini  env.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0fc9bd73241c_initial.py  20250524_090051_489169e9dd76_initial_migration.py
app/api/: deps.py
app/api/v1/: auth.py  merchant.py  tag.py  task.py
app/assets/css/: custom.css
app/assets/js/: ask.js  asr.js  tts.js
app/core/: __init__.py  config.py  database.py  docs.py  log.py  middleware.py  redis.py  security.py  settings.py
app/models/: __init__.py  base.py  merchant.py
app/schemas/: __init__.py  auth.py  merchant.py
app/schemas/RequestModel/: auth.py  tag.py  task.py
app/schemas/ResponseModel/: auth.py  base.py  tag.py  task.py
app/services/: auth_service.py  bilin_api_service.py  merchant_service.py
app/test/: create_table.sql
app/utils/: bilim_api.py  cache_tool.py  common.py  common_responses.py  jwt_helper.py  task.py
deploy/: auto-deploy.sh  deploy-manager.sh  docker-compose-middleware.yml  docker-compose.yml  file-watcher.sh  git-watcher.sh
deploy/db/: Dockerfile
deploy/redis/: redis.conf
web/: babel.config.js  package-lock.json  package.json  vue.config.js
web/src/: App.vue
web/src/router/: index.js
web/src/views/: home.vue
web/src/views/AiTools/: list.vue
web/src/views/DigitStaff/: index.vue
web/src/views/Layout/: Header.vue
